--- a/home.html
+++ b/home.html
@@ -152,7 +152,7 @@
                 <img src="./assets/scan.png" alt="" class="w-6">
               </a>
 
-              <a href="#" class="">
+              <a href="./profile/profile.html" class="">
                 <img src="./assets/user.png" alt="" class="w-5">
               </a>
               <a href="#" class="mr-5">
